<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="horizontal"
  android:textAlignment="center">

  <TextView
    android:id="@+id/a1_score"
    android:layout_width="90dp"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/a1_score"
    android:textAlignment="center"
    android:textColor="@android:color/black"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/a2_score"
    android:layout_width="90dp"
    android:textColor="@android:color/black"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:textAlignment="center"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/a2_score"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/a3_score"
    android:layout_width="90dp"
    android:textColor="@android:color/black"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:textAlignment="center"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/a3_score"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/a4_score"
    android:layout_width="90dp"
    android:textColor="@android:color/black"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/a4_score"
    android:textAlignment="center"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/a5_score"
    android:layout_width="90dp"
    android:textColor="@android:color/black"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/a5_score"
    android:textAlignment="center"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/a6_score"
    android:layout_width="90dp"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/a6_score"
    android:textColor="@android:color/black"
    android:textAlignment="center"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/a7_score"
    android:layout_width="90dp"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/a7_score"
    android:textColor="@android:color/black"
    android:textAlignment="center"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/a8_score"
    android:layout_width="90dp"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/a8_score"
    android:textColor="@android:color/black"
    android:textAlignment="center"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/a9_score"
    android:layout_width="90dp"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/a9_score"
    android:textColor="@android:color/black"
    android:textAlignment="center"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/a10_score"
    android:layout_width="90dp"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/a10_score"
    android:textColor="@android:color/black"
    android:textAlignment="center"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/age"
    android:layout_width="90dp"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/age"
    android:textAlignment="center"
    android:textColor="@android:color/black"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/gender"
    android:layout_width="156dp"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/gender"
    android:textColor="@android:color/black"
    android:textAlignment="center"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/ethnicity"
    android:layout_width="156dp"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/ethnicity"
    android:textColor="@android:color/black"
    android:textAlignment="center"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/jundice"
    android:layout_width="156dp"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/juandice"
    android:textColor="@android:color/black"
    android:textAlignment="center"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/autism"
    android:layout_width="156dp"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/autism"
    android:textColor="@android:color/black"
    android:textAlignment="center"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/country_of_res"
    android:layout_width="156dp"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/country_of_res"
    android:textColor="@android:color/black"
    android:textAlignment="center"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/used_app_before"
    android:layout_width="156dp"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/used_app_before"
    android:textColor="@android:color/black"
    android:textAlignment="center"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/result"
    android:layout_width="156dp"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/result"
    android:textColor="@android:color/black"
    android:textAlignment="center"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/age_desc"
    android:layout_width="156dp"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/age_desc"
    android:textColor="@android:color/black"
    android:textAlignment="center"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/relation"
    android:layout_width="156dp"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/relation"
    android:textColor="@android:color/black"
    android:textAlignment="center"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />

  <TextView
    android:id="@+id/classASD"
    android:layout_width="156dp"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/table_content_cell_bg"
    android:text="@string/class_asd"
    android:textColor="@android:color/black"
    android:textAlignment="center"
    android:textSize="12sp"
    tools:ignore="RtlCompat" />


</LinearLayout>