<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="16dp"
  >

  <TextView
    android:id="@+id/feature_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/feature_name"
    />

  <TextView
    android:id="@+id/feature_type"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:text="@string/type"
    android:layout_toEndOf="@+id/feature_name"
    />

  <TextView
    android:id="@+id/colons"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/colons"
    android:layout_marginStart="5dp"
    android:layout_toEndOf="@+id/feature_type"
    />

  <TextView
    android:id="@+id/feature_detail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/details"
    android:layout_marginStart="5dp"
    android:layout_toEndOf="@+id/colons"
    />
</RelativeLayout>