<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".ui.fragments.AboutAppFragment"
  tools:ignore="ExtraText">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
  <ImageView
    android:id="@+id/autism_image"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:src="@drawable/autism"
    android:layout_marginTop="100dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    />

  <TextView
    android:id="@+id/slogan"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:textAlignment="center"
    android:textStyle="bold"
    android:text="@string/autism_is_not_a_disability_n_it_s_a_different_ability"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/autism_image" />

  <TextView
    android:id="@+id/startyourtest"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:layout_constraintTop_toBottomOf="@id/tabLayout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:text="@string/now_that_you_know_what_autism_is_are_you_ready_to_take_a_test"
    />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rvAboutAutism"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/slogan"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="30dp"
    app:layout_constraintEnd_toEndOf="parent"
    />
  <com.google.android.material.tabs.TabLayout
    android:id="@+id/tabLayout"
    android:layout_width="match_parent"
    android:layout_marginTop="15dp"
    android:layout_height="10dp"
    app:layout_constraintTop_toBottomOf="@+id/rvAboutAutism" />

  <TextView
    android:id="@+id/test_result"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/please_do_your_test_to_see_your_result"
    app:layout_constraintTop_toBottomOf="@id/question_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:textStyle="bold"
    android:textColor="@color/pastel_red"
    android:textSize="18sp"
    />

  <Button
    android:id="@+id/question_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    style="@style/Widget.Material3.Button.TonalButton"
    android:text="@string/take_a_test"
    app:layout_constraintTop_toBottomOf="@id/startyourtest"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    />
  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>